--- a/Uppgift10/Uppgift10.csproj
+++ b/Uppgift10/Uppgift10.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1FBBF6F6-C867-49C0-8AF5-D2826B2B1ECF}</ProjectGuid>
+    <ProjectGuid>{34531CA2-B5A6-45F8-910A-BCE3C842F762}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BlackJack</RootNamespace>
-    <AssemblyName>BlackJack</AssemblyName>
+    <RootNamespace>Uppgift10</RootNamespace>
+    <AssemblyName>Uppgift10</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,14 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Card.cs" />
-    <Compile Include="Deck.cs" />
-    <Compile Include="Face.cs" />
-    <Compile Include="Game.cs" />
-    <Compile Include="Players.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Suit.cs" />
+    <Compile Include="Vehicle.cs" />
+    <Compile Include="VehicleData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
